Fix overflow behaviour in Material theme

--- a/inst/templates/material/material.css
+++ b/inst/templates/material/material.css
@@ -295,3 +295,7 @@ table .panel-body {
 .table td {
   padding: 8px 15px;
 }
+
+.mathDiv {
+  overflow-x: auto;
+}
